--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-easepick",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "dist/index.js",
   "module": "dist/module.js",
   "types": "dist/index.d.ts",
@@ -16,10 +16,14 @@
     "picker",
     "range"
   ],
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "build:ts": "tsc",
-    "build:cjs": "esbuild src/index.ts --format=cjs --bundle --outfile=dist/index.js --external:react --external:@easepick/core --external:easepick-react",
-    "build:esm": "esbuild src/index.ts --format=esm --bundle --outfile=dist/module.js --external:react --external:@easepick/core --external:easepick-react",
+    "build:cjs": "esbuild src/index.ts --format=cjs --bundle --outfile=dist/index.js --external:*",
+    "build:esm": "esbuild src/index.ts --format=esm --bundle --outfile=dist/module.js --external:*",
     "build": "yarn run build:cjs && yarn run build:esm && yarn run build:ts"
   },
   "peerDependencies": {
@@ -32,7 +36,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@easepick/core": "^1.2.0",
+    "@easepick/bundle": "^1.2.0",
     "easepick-react": "^0.0.4"
   }
 }
